# ebs_datagen

./: .gitignore  CMakeLists.txt  README.md  performance_report.md
resources/: schema.json
snippets/: uniform_distribution.cpp
src/: datagen.cpp  datagen.h  main.cpp  settings.h
